[package]
name = "catool-sql"
description = "SQL query builder"
version = "0.1.0"
authors = ["JunWang <1103870790@qq.com>"]
edition = "2018"
documentation = "..."
homepage = "https://github.com/jstzwj/catool-sql"
repository = "https://github.com/jstzwj/catool-sql"
readme = "https://github.com/jstzwj/catool-sql/blob/master/README.md"
keywords = ["SQL", "database"]
categories = ["database"]
license = "MIT"

[dependencies]



